# robomate-backend-tech-task

./: .gitignore  ADR.md  DATABASE_DECISION.md  Dockerfile  LEARNED.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TECHNOLOGY_OPTIONS.md  docker-compose.yml  init-db.sql  prometheus.yml  pyproject.toml  quick_test.sh
app/: __init__.py  main.py
app/api/: dependencies.py  middleware.py
app/api/routes/: events.py  health.py  stats.py
app/core/: config.py  logging.py  metrics.py
app/db/: __init__.py  database.py
app/models/: __init__.py  event.py
app/services/: event_service.py  nats_service.py  redis_service.py
app/workers/: __init__.py  event_processor.py
data/: events_sample.csv
scripts/: __init__.py  import_events.py
tests/: __init__.py  conftest.py
tests/integration/: test_event_flow.py
tests/unit/: test_idempotency.py  test_rate_limiter.py
